--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.5"
   },
   "devDependencies": {
