--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.20.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
-    "lodash": "^4.17.20",
     "mongoose": "^5.10.5"
   },
   "devDependencies": {
