feat: Search for words added to dictionary

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "graphql": "^15.3.0",
+    "lodash.debounce": "^4.0.8",
+    "notistack": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
